mise a jour du rangement des fichiers dans les dossier adapte

--- a/app/flaskr/templates/homepage.html
+++ b/app/flaskr/templates/homepage.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="Styles-page1.css" rel="stylesheet" />
+    <link href="../static/css/Styles-page1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <img src="téléchargement.png" alt="logo du NOMDELAPPLI" class="logo">
+        <img src="../static/img/téléchargement.png" alt="logo du NOMDELAPPLI" class="logo">
         <input type="search" name="" id="">
         <h1>NOMDELAPPLI</h1>
     </header>
