--- a/app/flaskr/templates/1erpage.html
+++ b/app/flaskr/templates/1erpage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit 1er page</title>
     <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
+    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
 </head>
 <body>
     <header>
