--- a/app/flaskr/templates/base.html
+++ b/app/flaskr/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
     <title>Document</title>
 </head>
 <body>
