--- a/app/flaskr/templates/homepage.html
+++ b/app/flaskr/templates/homepage.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
     <title>Document</title>
     <link href="../static/css/Styles-page1.css" rel="stylesheet" />
 </head>
