--- a/app/flaskr/static/css/1er page.css
+++ b/app/flaskr/static/css/1er page.css
@@ -86,7 +86,7 @@ footer {
 }
   
 .icone-friends:hover,.icone-cam:hover,.icone-discu:hover,.icone-album:hover,.icone-setting:hover {
-    transform: scale(1.1); /* Augmente légèrement la taille au survol */
+    transform: scale(1.5); /* Augmente légèrement la taille au survol */
 }
 
 
@@ -117,22 +117,24 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
-	border-top: 1px solid #dadada;
+    border-top: 1px solid #dadada;
     border-bottom: 1px solid #dadada;
     border-left: none;
     border-right: none;
     border-radius: 10px;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
-	height: 75px;
-	position: relative;
+    height: 75px;
+    position: relative;
+    padding-right: 40px; /* Assurez-vous qu'il y a de l'espace pour le bouton réglage */
 }
 .chat-info {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1; /* Prend tout l'espace disponible */
 }
+
   
 .chat-name {
 	font-weight: bold;
@@ -175,18 +177,18 @@ footer {
 	display: inline; /* Assurer qu'ils sont des éléments en ligne */
 }
 
-.profilespicture{
-	top: 50%;
+.profilespictures {
+    width: 50px; /* ajustez la largeur à votre convenance */
+    height: 50px; /* ajustez la hauteur à votre convenance */
+    border-radius: 50%; /* ajustez le rayon de courbure à votre convenance */
+    margin: 0 10px;
 }
 
-.reglage{
-	width: 25px; /* ajustez la largeur à votre convenance */
+.reglage {
+    width: 25px; /* ajustez la largeur à votre convenance */
     height: 25px; /* ajustez la hauteur à votre convenance */
-    border-radius: 6px; /* ajustez le rayon de courbure à votre convenance */
-	
-    /* position: absolute;
-	right: 7%; */
 }
+
 .footer-button{
 	background: none;
     border: none;
@@ -199,18 +201,18 @@ footer {
     height: 30px; /* ajustez la hauteur à votre convenance */
     transition: transform 0.2s ease-in-out;
 }
-.footer-button img:hover,.reglage-button img:hover {
+/* .footer-button img:hover,.reglage-button img:hover {
 	background-color: #8d8ef5;
-}
-.reglage-button{
-	background: none;
+} */
+.reglage-button {
+    position: absolute;
+    right: 10px;
+    top: 50%; 
+    transform: translateY(-50%);
+    z-index: 1; /* S'assure que le bouton est au-dessus des autres éléments */
+    background: none;
     border: none;
     padding: 0;
     margin: 0;
     cursor: pointer;
-	position: absolute;
-	right: 10px;
-    top: 10%; 
-    transform: translateY(-50%);
-    z-index: 1; /* S'assure que le bouton est au-dessus des autres éléments */
 }
