--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -42,25 +42,25 @@
 
     <script>
         function handleReglageClick() {
-            window.location.href = '../templates/pagereglagediscussion.html';
+            window.location.href = '../templates/reglage.html';
         }  
         function redirectToChatPage() {
-            window.location.href = "../templates/pagediscussion.html";
+            window.location.href = "../templates/discussion.html";
         }
         function pagealbum() {
-            window.location.href = "../templates/pagealbum.html";
+            window.location.href = "../templates/album.html";
         }
         function pageamis() {
-            window.location.href = "../templates/page listeamis.html";
+            window.location.href = "../templates/amis.html";
         }
         function pagecam() {
-            window.location.href = "../templates/page appareilphoto.html";
+            window.location.href = "../templates/photo.html";
         }
         function pagechat() {
-            window.location.href = "../templates/page chat.html";
+            window.location.href = "../templates/chat.html";
         }
         function pageparametre() {
-            window.location.href = "../templates/pageparametres.html";
+            window.location.href = "../templates/parametres.html";
         }
              
     </script>
