lien faire main.js

--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -26,30 +26,7 @@
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
 
-    <script>
-        function handleReglageClick() {
-            window.location.href = '../templates/pagereglagediscussion.html';
-        }  
-        function redirectToChatPage() {
-            window.location.href = "../templates/pagediscussion.html";
-        }
-        function pagealbum() {
-            window.location.href = "../templates/pagealbum.html";
-        }
-        function pageamis() {
-            window.location.href = "../templates/page listeamis.html";
-        }
-        function pagecam() {
-            window.location.href = "../templates/page appareilphoto.html";
-        }
-        function pagechat() {
-            window.location.href = "../templates/page chat.html";
-        }
-        function pageparametre() {
-            window.location.href = "../templates/pageparametres.html";
-        }
-             
-    </script>
+    <script src="../static/js/main.js"></script>
     
 </body>
 </html>
