--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -40,30 +40,6 @@
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
 
-    <script>
-        function handleReglageClick() {
-            window.location.href = '../templates/reglage.html';
-        }  
-        function redirectToChatPage() {
-            window.location.href = "../templates/discussion.html";
-        }
-        function pagealbum() {
-            window.location.href = "../templates/album.html";
-        }
-        function pageamis() {
-            window.location.href = "../templates/amis.html";
-        }
-        function pagecam() {
-            window.location.href = "../templates/photo.html";
-        }
-        function pagechat() {
-            window.location.href = "../templates/chat.html";
-        }
-        function pageparametre() {
-            window.location.href = "../templates/parametres.html";
-        }
-             
-    </script>
-    
+    <script src="../static/js/main.js"></script>
 </body>
 </html>
