--- a/app/flaskr/templates/amis.html
+++ b/app/flaskr/templates/amis.html
@@ -9,7 +9,7 @@
     <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/1erpage.js"></script>
 </head>
-<body>
+<body class="slide-out">
     <header>
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Amis</div>
