--- a/app/flaskr/static/css/1er page.css
+++ b/app/flaskr/static/css/1er page.css
@@ -216,3 +216,14 @@ footer {
     margin: 0;
     cursor: pointer;
 }
+
+.fade-in {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
