correction app.py et page de conexion et de register

--- a/app/flaskr/templates/auth/register.html
+++ b/app/flaskr/templates/auth/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
-    <title>Login | E-spirit</title>
+    <title>Register | E-spirit</title>
 </head>
 <body>
     
