--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,9 +6,10 @@
     <title>E-Spirit album</title>
     <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
     <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
-    <script src="../static/1erpage.js"></script>
+    <script src="../static/js/main.js"></script>
+   
 </head>
-<body class="slide-out">
+<body class="slide-out" data-page="page4">
     <header>
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Album</div>
@@ -27,6 +27,7 @@
     </footer>
 
     <script src="../static/js/main.js"></script>
+    
     
 </body>
 </html>
