--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit Chat</title>
     <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
-    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
-    <script src="../static/1erpage.js"></script>
+    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <script src="../static/js/main.js"></script>
+ 
 </head>
-<body class="slide-out">
+<body class="slide-out" data-page="page3">
     <header>
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Chat</div>
     </header>
-
 
     <ul class="conversation">
         <div class="chat" onclick="redirectToChatPage()">
@@ -31,7 +30,7 @@
             </div>
         </div>
     </ul>
-    
+
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
         <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
@@ -39,7 +38,8 @@
         <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
         <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
     </footer>
-
     <script src="../static/js/main.js"></script>
+   
+    
 </body>
 </html>
