--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -15,6 +15,7 @@
         <div class="Name-page">Appareil Photo</div>
     </header>
     <div class="container">
+        <div class="container">
         <video id="camera" width="320" height="240" autoplay></video>
         <canvas id="photo" width="320" height="240"></canvas>
         <button id="snap" class="btn">Prendre une photo</button>
