--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit album</title>
     <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
-    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
+    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/main.js"></script>
-   
 </head>
 <body class="slide-out" data-page="page4">
     <header>
@@ -15,8 +14,12 @@
         <div class="Name-page">Album</div>
     </header>
 
-
-    
+    <div class="listealbum">
+        <div class="grid-item">Album du groupe....</div>
+        <div class="grid-item">Album du chat avec ....</div>
+        <div class="grid-item">Album du groupe ...</div>
+        <div class="grid-item">Album du chat........</div>
+    </div>
     
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
@@ -27,7 +30,6 @@
     </footer>
 
     <script src="../static/js/main.js"></script>
-    
-    
 </body>
 </html>
+
