rajout du chargement du script js dans photo.html

--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
     <link rel="stylesheet" href="../static/css/page-photo.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <script src="../static/js/main.js"></script>
     <script src="../static/js/appareil-photo.js" defer></script>
 </head>
 <body class="slide-out" data-page="page2">
