--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit appareil photo</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/1er page.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/page-appphoto.css">
     <link rel="stylesheet" href="../static/css/page-photo.css">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/main.js"></script>
