--- a/app/flaskr/static/css/page-amis.css
+++ b/app/flaskr/static/css/page-amis.css
@@ -14,7 +14,7 @@ body{
 }
 
 header, footer {
-    background-color: #ffffff;
+    background-color: #f0f0f0;
     color: #000000;
     padding: 18px 0;
     text-align: left;
@@ -25,7 +25,7 @@ header, footer {
 
 header {
     top: 0;
-    border-bottom: 1px solid #a59999;
+    /* border-bottom: 1px solid #a59999; */
 	overflow: hidden;
 	border-radius: 0 0 30px 30px;
 
@@ -34,7 +34,7 @@ header {
 .header-rectangle {
     width: 40px; /* ajustez la largeur à votre convenance */
     height: 35px; /* ajustez la hauteur à votre convenance */
-    background-color: #000000; /* ajustez la couleur de fond à votre convenance */
+    background-color: #000000; 
     border-radius: 6px; /* ajustez le rayon de courbure à votre convenance */
     position: absolute;
     top: 5px; /* ajustez la position à votre convenance */
@@ -61,7 +61,7 @@ footer {
     bottom: 0; /* Ajouté pour que le footer soit en bas de page */
     border-radius: 30px 30px 0 0; /* Arrondi les deux angles supérieurs */
     overflow: hidden;
-	border-top: 1px solid #a59999;
+	/* border-top: 1px solid #a59999; */
 	display: flex;
 	justify-content: space-between 5px;
 	align-items: center;
@@ -198,33 +198,22 @@ footer {
     cursor: pointer;
 }
 
-.fade-in {
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
+input[type="search"] {
+    width: calc(100% - 40px); /* Ajuste la largeur pour laisser un espace de 20px de chaque côté */
+    margin: 10px 20px; /* Espace de 10px en haut et en bas, et 20px à gauche et à droite */
+    padding: 10px; /* Ajoute du rembourrage interne */
+    font-size: 16px; /* Ajustez la taille de la police selon vos besoins */
+    border: 1px solid #ccc; /* Bordure grise claire */
+    border-radius: 20px; /* Bordure légèrement arrondie */
+    box-sizing: border-box; /* Inclut le padding et la bordure dans la largeur totale */
 }
 
-.fade-out {
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+input[type="search"]::placeholder {
+    color: #999; /* Couleur du placeholder */
+    font-style: italic; /* Style du texte du placeholder */
 }
 
-.listealbum {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    width: 100%;
-    gap: 10px; /* Optionnel : pour ajouter de l'espace entre les éléments */
-}
-
-.grid-item {
-    background-color: #ffffff;
-    border-radius: 15px;
-    height: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
+.rechercheamis {
+    border-radius: 50%; /* ajustez le rayon de courbure à votre convenance */
+    margin: 0 10px;
 }
