--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -19,6 +19,18 @@
         <div class="grid-item">Album du chat avec ....</div>
         <div class="grid-item">Album du groupe ...</div>
         <div class="grid-item">Album du chat........</div>
+        <div class="grid-item">Album du groupe....</div>
+        <div class="grid-item">Album du chat avec ....</div>
+        <div class="grid-item">Album du groupe ...</div>
+        <div class="grid-item">Album du chat........</div>
+        <div class="grid-item">Album du groupe....</div>
+        <div class="grid-item">Album du chat avec ....</div>
+        <div class="grid-item">Album du groupe ...</div>
+        <div class="grid-item">Album du chat........</div>
+        <div class="grid-item">Album du groupe....</div>
+        <div class="grid-item">Album du chat avec ....</div>
+        <div class="grid-item">Album du groupe ...</div>
+        <div class="grid-item">Album du chat........</div>
     </div>
     
     <footer>
