--- a/app/flaskr/static/css/page-amis.css
+++ b/app/flaskr/static/css/page-amis.css
@@ -20,6 +20,7 @@ header, footer {
     text-align: left;
     position: fixed;
     width: 100%;
+    box-shadow: 0 2px 80px rgba(0, 0, 0, 0.1);
     z-index: 1000;
 }
 
@@ -28,7 +29,7 @@ header {
     /* border-bottom: 1px solid #a59999; */
 	overflow: hidden;
 	border-radius: 0 0 30px 30px;
-
+    
 }
 
 .header-rectangle {
@@ -51,10 +52,9 @@ header {
     color: #333; /* ajustez la couleur du texte à votre convenance */
 }
 
-.ta-pp{
-	margin-left: 5%;
-	height: 30px;
-	width: 30px;
+.ajouterdesamis {
+    height: 20px;
+    width: 20px;
 }
 
 footer {
@@ -68,6 +68,7 @@ footer {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+    
 }
 
   
@@ -79,6 +80,8 @@ footer {
 	padding-left: 10px;
 	padding-right: 10PX;
 	transition: transform 0.2s ease-in-out;
+    opacity: 50%;
+    
 }
   
 .icone-friends:hover,.icone-cam:hover,.icone-discu:hover,.icone-album:hover,.icone-setting:hover {
@@ -216,4 +219,12 @@ input[type="search"]::placeholder {
 .rechercheamis {
     border-radius: 50%; /* ajustez le rayon de courbure à votre convenance */
     margin: 0 10px;
+}
+
+.ajouterdesamis {
+    position: relative;
+    height: 20px;
+    width: 20px;
+    left: 265px;
+    top: 50%;
 }
