--- a/app/flaskr/templates/amis.html
+++ b/app/flaskr/templates/amis.html
@@ -12,7 +12,7 @@
     <header>
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Amis</div>
-        <div class="ajouter des amis"><img src="../static/img/ajouteramis.png" alt="ajouter amis"></div>
+        <img src="../static/img/ajouteramis.png" alt="ajouter amis" class="ajouterdesamis">
     </header>
 
     <input type="search" name="rechercheamis" placeholder="Taper le nom de votre ami"/>
