création des pages de connexion et de register avec leur css et ajout dans app.py

--- a/app/flaskr/templates/auth/signup.html
+++ b/app/flaskr/templates/auth/signup.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.png">
+    <link rel="icon"    type="image/png" href="../../static/img/logo_E-esprit.ico">
     <link rel="stylesheet" href="../../static/css/Styles-Body.css">
-    <link rel="stylesheet" href="../../static/css/page-login.css">
-    <title>Login | E-spirit</title>
+    <link rel="stylesheet" href="../../static/css/page-register.css">
+    <title>Register | E-spirit</title>
 </head>
 <body>
     <div class="background">
@@ -24,9 +24,13 @@
                 <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" id="password" name="password" required>
+            </div>
             <button type="submit">Se connecter</button>
         </form>
-        <p class="signup-link">Pas encore de compte ? <a href="/sing-up">Inscrivez-vous</a></p>
+        <p class="signup-link">Vous possédez déjà un compte ?<a href="/login">Connectez-vous</a></p>
     </div>
 </body>
 </html>
