--- a/app/flaskr/templates/amis.html
+++ b/app/flaskr/templates/amis.html
@@ -12,13 +12,14 @@
     <header>
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Amis</div>
-        <img src="../static/img/ajouteramis.png" alt="ajouter amis" class="ajouterdesamis">
     </header>
 
-    <input type="search" name="rechercheamis" placeholder="Taper le nom de votre ami"/>
+    <div class="barrerecherche">
+        <input type="search" name="rechercheamis" placeholder="Taper le nom de votre ami ou ajouter un ami avec le +"/>
+        <button class="search-button"><img src="../static/img/ajouteramis.png" alt="search icon"></button>
+    </div>
+    
 
-    
-    
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
         <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
