--- a/app/flaskr/static/css/page-amis.css
+++ b/app/flaskr/static/css/page-amis.css
@@ -251,3 +251,66 @@ input[type="search"]::placeholder {
     width: 20px; /* Ajustez la largeur selon vos besoins */
     height: 20px; /* Ajustez la hauteur selon vos besoins */
 }
+
+.ligne-sous-barre {
+    width: 97%; /* Ajustez cette valeur selon la longueur souhaitée */
+    height: 2px; /* Ajustez l'épaisseur de la ligne */
+    background-color: #c4c4c452; /* Couleur de la ligne */
+    margin:1px auto; /* Centre la ligne et ajoute une marge au-dessus et au-dessous */
+}
+
+
+.listeamis {
+    display: flex;
+    flex-wrap: wrap; /* Pour que les boutons passent à la ligne lorsque l'écran est trop petit */
+    justify-content: center; /* Pour aligner les boutons au centre */
+}
+
+.bonhomme-button {
+    position: relative;
+    width: 60px;
+    height: 100px;
+    background-color: #ffffff;
+    border-radius: 50% 50% 0 0;
+    margin-top: 50px;
+    cursor: pointer;
+    text-align: center;
+    margin-left: 10px;
+}
+
+
+
+.bonhomme-button::before {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    top: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    content: '';
+    position: absolute;
+    background-color: #ffffff;
+}
+
+
+.button-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    font-size: 14px;
+    pointer-events: none;
+    font-weight: 150%;
+}
+
+.bonhomme-button-before {
+    position: absolute; /* Positionnement absolu par rapport à son parent .bonhomme-button */
+    top: 0; /* Position au-dessus du bouton */
+    left: 0; /* Position à gauche du bouton */
+    width: 100%; /* Largeur égale à celle du bouton */
+    height: 100%; /* Hauteur égale à celle du bouton */
+    border-radius: inherit; /* Prend le même rayon de bordure que le bouton */
+    z-index: -1; /* Place le pseudo-élément derrière le contenu du bouton */
+}
+ 
