ajout des parametre temporaire

--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -14,10 +14,30 @@
         <img src="" alt="Photo" class="ta-pp">
         <div class="Name-page">Paramètre</div>
     </header>
-
-
-    
-    
+    <div class="settings-list">
+        <div class="setting-item">
+            <span class="setting-name">Mode Avion</span>
+            <label class="switch">
+                <input type="checkbox" id="airplane-mode">
+                <span class="slider round"></span>
+            </label>
+        </div>
+        <div class="setting-item">
+            <span class="setting-name">Wi-Fi</span>
+            <label class="switch">
+                <input type="checkbox" id="wifi">
+                <span class="slider round"></span>
+            </label>
+        </div>
+        <div class="setting-item">
+            <span class="setting-name">Bluetooth</span>
+            <label class="switch">
+                <input type="checkbox" id="bluetooth">
+                <span class="slider round"></span>
+            </label>
+        </div>
+        <!-- Ajoutez plus de paramètres ici -->
+    </div>    
     <footer>
         <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
         <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
